--- a/musicians-singers.html
+++ b/musicians-singers.html
@@ -1391,42 +1391,55 @@ function renderCelebrityCards(musicians) {
         border-radius: 4px;
       }
       .actor-card {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background: #fff;
-        box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
-        padding: 24px 28px 20px 28px;
-        width: 240px;
-        cursor: pointer;
-        transition: box-shadow 0.2s, transform 0.2s;
-        border: 1px solid #e5e5e5;
-        border-radius: 0;
-      }
-      .actor-img {
-        width: 180px;
-        height: 240px;
-        object-fit: cover;
-        border-radius: 0;
-        margin-bottom: 18px;
-        border: 1px solid #ddd;
-        background: #fff;
-      }
-      .actor-info {
-        text-align: center;
-        color: #111;
-      }
-      .actor-info b {
-        color: #111;
-        font-size: 1.25em;
-        font-weight: bold;
-      }
-      .actor-price {
-        color: #111;
-        font-weight: bold;
-        font-size: 1.15em;
-        margin-top: 10px;
-      }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #ffffff;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+  padding: 24px 28px 20px 28px;
+  width: 240px;
+  cursor: pointer;
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+  border-radius: 12px;
+  border: none;
+}
+
+.actor-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 28px rgba(0, 0, 0, 0.12);
+}
+
+.actor-img {
+  width: 180px;
+  height: 240px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 16px;
+  border: none;
+  background: #f5f5f5;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+}
+
+.actor-info {
+  text-align: center;
+  color: #222;
+  line-height: 1.4;
+}
+
+.actor-info b {
+  color: #111;
+  font-size: 1.25em;
+  font-weight: 600;
+  display: block;
+}
+
+.actor-price {
+  color: #2d7a4b; /* Nice green for price */
+  font-weight: bold;
+  font-size: 1.15em;
+  margin-top: 8px;
+}
+
     </style>
     <!-- Removed redundant script that interfered with carousel functionality -->
     <style>
