--- a/sports-personalities-details.html
+++ b/sports-personalities-details.html
@@ -685,6 +685,7 @@
                   icon: "success",
                   title: "Booking Request Sent!",
                   text: "Thank you! We will respond within 4 hours during business hours.",
+                  timer: 3000, // 3 seconds
                   confirmButtonText: "OK",
                 }).then(() => {
                   window.location.href = "index.html"; // Redirect after OK
