--- a/index.html
+++ b/index.html
@@ -1199,7 +1199,7 @@
               we connect you with the perfect artist for your audience.
             </p>
             <a
-              href="musician-singers.html"
+              href="musicians-singers.html"
               style="
                 display: inline-block;
                 margin-top: 10px;
