--- a/popular-person-details.html
+++ b/popular-person-details.html
@@ -661,15 +661,15 @@ document.addEventListener("DOMContentLoaded", function () {
   });
 });
 
-      //document.addEventListener("DOMContentLoaded", function () {
-      //  loadPersonDetails();
+      document.addEventListener("DOMContentLoaded", function () {
+        loadPersonDetails();
 
         // Add form submission handler
-       // const bookingForm = document.getElementById("booking-form");
-      //  if (bookingForm) {
-      //    bookingForm.addEventListener("submit", handleFormSubmission);
-      //  }
-     // });
+        //const bookingForm = document.getElementById("booking-form");
+        //if (bookingForm) {
+        //  bookingForm.addEventListener("submit", handleFormSubmission);
+        //}
+      });
     </script>
   </body>
 </html>
